# rust_gl_render

./: Cargo.toml  Desenvolvimento de uma aplicação gráfica interativa.pptx  README.md  cornell_box.mtl
release/src/shader/: fragment.glsl  vertex.glsl
src/: camera.rs  complex_obj.rs  composite_obj.rs  cube.rs  draw.rs  draw_frame.rs  drawable.rs  game_loop.rs  geo_objs.rs  handle_input.rs  load_texture.rs  main.rs  matrix.rs  obj_model.rs  scene_object.rs  shader_program.rs  tempCodeRunnerFile.rs  vertex.rs  view.rs
src/data/shader/: fragment.glsl  phong.glsl  vertex.glsl
src/data/shader/fragment/: _phong_ilumination.glsl  blinn_phong_ilumination.glsl  default.glsl  gourad_fragment_phong.glsl  gourad_lambert_ilumination.glsl  gourad_phong_ilumination.glsl  gouraud_fragment_lambert.glsl  lambert_ilumination.glsl  phong_ilumination.glsl  raw_color.glsl  tempCodeRunnerFile.ts
src/data/shader/vertex/: goraud_shading_lambert.glsl  goraud_shading_phong.glsl  gouraud_shading_lambert.glsl  phong_ilumination.glsl
src/models/: complex_obj.rs  composite_obj.rs  draw.rs  load_texture.rs  matrix.rs  mod.rs  obj_model.rs  scene_object.rs  tempCodeRunnerFile.rs
src/shader/: compile_shader.rs  fragment.glsl  link_program.rs  mod.rs  shader_program.rs  vertex.glsl
src/utils/: mod.rs  texture_from_file.rs
src/view/: mod.rs
src/world/: camera.rs  free_camera.rs  lighting.rs  mod.rs  tempCodeRunnerFile.rs  view.rs
