[package]
name = "rust_gl_render" 
version = "0.1.0"   
authors = ["Matheus <mlcruz@inf.ufrgs.br>"]

# [dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"
# default-features = false

[dependencies]
gl = "0.6.0"
glutin = "0.21.0"
glm = "0.2.3"
ignore-result = "0.2.0"
image = "0.19.0"
tobj = "0.1.11"
rand = "0.6.5"
